--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.jboss.osgi.framework</groupId>
         <artifactId>jbosgi-framework-parent</artifactId>
-        <version>1.1.8.Final</version>
+        <version>1.1.9-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Framework Core</name>
