--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>jbosgi-framework-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>1.1.8.Final</version>
+    <version>1.1.9-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
