--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <artifactId>jbosgi-framework-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>1.3.1.CR6</version>
+    <version>1.3.1.CR7-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
