--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>org.jboss.osgi.framework</groupId>
         <artifactId>jbosgi-framework-parent</artifactId>
-        <version>2.0.0.CR38-SNAPSHOT</version>
+        <version>3.0.0.Alpha1-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Framework Core</name>
@@ -78,7 +78,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>org.osgi.enterprise</artifactId>
         </dependency>
 
         <!-- Provided Dependencies -->
