--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <artifactId>jbosgi-framework-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>2.0.0.CR38-SNAPSHOT</version>
+    <version>3.0.0.Alpha1-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -56,16 +56,14 @@
         <version.jboss.logging.processor>1.1.0.Beta1</version.jboss.logging.processor>
         <version.jboss.modules>1.1.3.GA</version.jboss.modules>
         <version.jboss.msc>1.0.2.GA</version.jboss.msc>
-        <version.jboss.osgi.deployment>1.2.0.CR1</version.jboss.osgi.deployment>
-        <version.jboss.osgi.equinox>3.5.2</version.jboss.osgi.equinox>
-        <version.jboss.osgi.felix>3.0.4</version.jboss.osgi.felix>
-        <version.jboss.osgi.metadata>2.1.1.CR9</version.jboss.osgi.metadata>
-        <version.jboss.osgi.resolver>3.0.0.CR8</version.jboss.osgi.resolver>
-        <version.jboss.osgi.spi>3.2.0.CR1</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>1.0.4</version.jboss.osgi.testing>
-        <version.jboss.osgi.vfs>1.1.2.CR1</version.jboss.osgi.vfs>
+        <version.jboss.osgi.deployment>2.0.0.Alpha1</version.jboss.osgi.deployment>
+        <version.jboss.osgi.metadata>3.0.0.Alpha1</version.jboss.osgi.metadata>
+        <version.jboss.osgi.resolver>4.0.0.Alpha1</version.jboss.osgi.resolver>
+        <version.jboss.osgi.spi>4.0.0.Alpha1</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>2.0.0.Alpha1</version.jboss.osgi.testing>
+        <version.jboss.osgi.vfs>2.0.0.Alpha1</version.jboss.osgi.vfs>
         <version.mockito>1.8.5</version.mockito>
-        <version.osgi>4.2.0</version.osgi>
+        <version.osgi>5.0.0</version.osgi>
 
         <surefire.profiler.args />
         <surefire.system.args>-ea ${surefire.profiler.args}</surefire.system.args>
@@ -74,11 +72,17 @@
     <!-- Dependency Management -->
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>biz.aQute</groupId>
-                <artifactId>aQute.bnd</artifactId>
-                <version>${version.aqute.bnd}</version>
-            </dependency>
+			<dependency>
+				<groupId>biz.aQute</groupId>
+				<artifactId>aQute.bnd</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>org.osgi</groupId>
+						<artifactId>org.osgi.compendium</artifactId>
+					</exclusion>
+				</exclusions>
+				<version>${version.aqute.bnd}</version>
+			</dependency>
             <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
@@ -137,20 +141,6 @@
                 <version>${version.jboss.osgi.vfs}</version>
             </dependency>
 
-            <!-- Equinox Dependencies -->
-            <dependency>
-                <groupId>org.jboss.osgi.equinox</groupId>
-                <artifactId>jboss-osgi-equinox</artifactId>
-                <version>${version.jboss.osgi.equinox}</version>
-            </dependency>
-
-            <!-- Felix Dependencies -->
-            <dependency>
-                <groupId>org.jboss.osgi.felix</groupId>
-                <artifactId>jboss-osgi-felix</artifactId>
-                <version>${version.jboss.osgi.felix}</version>
-            </dependency>
-
             <!-- OSGi Dependencies -->
             <dependency>
                 <groupId>org.osgi</groupId>
@@ -159,7 +149,7 @@
             </dependency>
             <dependency>
                 <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.compendium</artifactId>
+                <artifactId>org.osgi.enterprise</artifactId>
                 <version>${version.osgi}</version>
             </dependency>
 
