--- a/aggregated/pom.xml
+++ b/aggregated/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>org.jboss.osgi.framework</groupId>
         <artifactId>jbosgi-framework-parent</artifactId>
-        <version>3.0.0.Alpha1</version>
+        <version>3.0.0.Alpha2-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Framework Aggregated</name>
