--- a/aggregated/pom.xml
+++ b/aggregated/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>org.jboss.osgi.framework</groupId>
         <artifactId>jbosgi-framework-parent</artifactId>
-        <version>3.0.0.Alpha2-SNAPSHOT</version>
+        <version>3.0.0.Alpha2</version>
     </parent>
 
     <name>JBossOSGi Framework Aggregated</name>
@@ -102,6 +102,14 @@
 						            <groupId>org.jboss.logmanager</groupId>
 						            <artifactId>jboss-logmanager</artifactId>
 								</artifactItem>
+                                <artifactItem>
+                                    <groupId>org.osgi</groupId>
+                                    <artifactId>org.osgi.core</artifactId>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.osgi</groupId>
+                                    <artifactId>org.osgi.enterprise</artifactId>
+                                </artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.build.directory}/test-libs</outputDirectory>
 							<stripVersion>true</stripVersion>
