--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <artifactId>jbosgi-framework-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>3.0.0.Alpha2</version>
+    <version>3.0.0.Alpha3-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
