--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -50,6 +50,10 @@
             <groupId>biz.aQute</groupId>
             <artifactId>aQute.bnd</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.enterprise</artifactId>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
