--- a/core/src/test/resources/logging.properties
+++ b/core/src/test/resources/logging.properties
@@ -34,7 +34,7 @@ logger.handlers=FILE
 # Console handler configuration
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.properties=autoFlush
-handler.CONSOLE.level=INFO
+handler.CONSOLE.level=DEBUG
 handler.CONSOLE.autoFlush=true
 handler.CONSOLE.formatter=PATTERN
 
