--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>org.jboss.osgi.framework</groupId>
         <artifactId>jbosgi-framework-parent</artifactId>
-        <version>3.0.0.Alpha3</version>
+        <version>3.0.0.Alpha4-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Framework Core</name>
