Initial R5 TCK setup

--- a/tcksetup/ant.properties.example
+++ b/tcksetup/ant.properties.example
@@ -7,7 +7,7 @@
 aQute.bnd.version=0.0.365.SP1
 
 # The location of the OSGi TCK
-# tck.checkout.dir=/home/yourname/git/osgitck
+# tck.checkout.dir=/home/yourname/git/org.osgi.build
 
 # TCK user
 # username=yourname
